--- a/translations/oe_corporate_blocks-el.po
+++ b/translations/oe_corporate_blocks-el.po
@@ -10,29 +10,27 @@ msgstr "tel:0080067891011"
 msgid "Call us 00 800 6 7 8 9 10 11"
 msgstr "Τηλεφωνήστε μας στο 00 800 6 7 8 9 10 11"
 
-msgid "https://europa.eu/european-union/contact/call-us_en"
-msgstr "https://europa.eu/european-union/contact/call-us_el"
+msgid "https://european-union.europa.eu/contact-eu/call-us_en"
+msgstr "https://european-union.europa.eu/contact-eu/call-us_el"
 
 msgid "Use other telephone options"
 msgstr ""
 "Χρησιμοποιήστε άλλες τηλεφωνικές "
 "επιλογές"
 
-msgid "https://europa.eu/european-union/contact/write-to-us_en"
-msgstr "https://europa.eu/european-union/contact/write-to-us_el"
+msgid "https://european-union.europa.eu/contact-eu/write-us_en"
+msgstr "https://european-union.europa.eu/contact-eu/write-us_el"
 
 msgid "Write to us via our contact form"
 msgstr ""
 "Γράψτε μας μέσω του δελτίου "
 "επικοινωνίας"
 
-msgid "https://europa.eu/european-union/contact/meet-us_en"
-msgstr "https://europa.eu/european-union/contact/meet-us_el"
+msgid "https://european-union.europa.eu/contact-eu/meet-us_en"
+msgstr "https://european-union.europa.eu/contact-eu/meet-us_el"
 
-msgid "Meet us at a local EU office"
-msgstr ""
-"Συναντήστε μας σε τοπικό γραφείο της "
-"ΕΕ"
+msgid "Meet us at one of the EU centres"
+msgstr "Συναντήστε μας σε ένα από τα κέντρα της ΕΕ"
 
 msgid "Find a social media account"
 msgstr ""
@@ -44,8 +42,8 @@ msgstr ""
 "Αναζητήστε τις σελίδες της ΕΕ στα μέσα "
 "κοινωνικής δικτύωσης"
 
-msgid "https://europa.eu/european-union/contact/social-networks_en"
-msgstr "https://europa.eu/european-union/contact/social-networks_el"
+msgid "https://european-union.europa.eu/contact-eu/social-media-channels_en"
+msgstr "https://european-union.europa.eu/contact-eu/social-media-channels_el"
 
 msgid "EU institutions"
 msgstr "Θεσμικά όργανα της ΕΕ"
@@ -146,8 +144,8 @@ msgstr "https://op.europa.eu/el/home"
 msgid "Agencies"
 msgstr "Οργανισμοί"
 
-msgid "https://europa.eu/european-union/about-eu/agencies_en"
-msgstr "https://europa.eu/european-union/about-eu/agencies_el"
+msgid "https://european-union.europa.eu/institutions-law-budget/institutions-and-bodies/institutions-and-bodies-profiles_en?f%5B0%5D=oe_organisation_eu_type%3Ahttp%3A//publications.europa.eu/resource/authority/corporate-body-classification/AGENCY_DEC&f%5B1%5D=oe_organisation_eu_type%3Ahttp%3A//publications.europa.eu/resource/authority/corporate-body-classification/AGENCY_EXEC&f%5B2%5D=oe_organisation_eu_type%3Ahttp%3A//publications.europa.eu/resource/authority/corporate-body-classification/EU_JU"
+msgstr "https://european-union.europa.eu/institutions-law-budget/institutions-and-bodies/institutions-and-bodies-profiles_el?f%5B0%5D=oe_organisation_eu_type%3Ahttp%3A//publications.europa.eu/resource/authority/corporate-body-classification/AGENCY_DEC&f%5B1%5D=oe_organisation_eu_type%3Ahttp%3A//publications.europa.eu/resource/authority/corporate-body-classification/AGENCY_EXEC&f%5B2%5D=oe_organisation_eu_type%3Ahttp%3A//publications.europa.eu/resource/authority/corporate-body-classification/EU_JU"
 
 msgid "About this site"
 msgstr "Γενικά"
@@ -158,14 +156,17 @@ msgstr "https://europa.eu/european-union/abouteuropa_el"
 msgid "Language policy"
 msgstr "Γλωσσική πολιτική"
 
-msgid "https://europa.eu/european-union/abouteuropa/language-policy_en"
-msgstr "https://europa.eu/european-union/abouteuropa/language-policy_el"
+msgid "Languages on our websites"
+msgstr "Γλώσσες στις οποίες είναι διαθέσιμοι οι ιστότοποί μας"
+
+msgid "https://european-union.europa.eu/languages-our-websites_en"
+msgstr "https://european-union.europa.eu/languages-our-websites_el"
 
 msgid "Privacy policy"
 msgstr "Πολιτική απορρήτου"
 
-msgid "https://europa.eu/european-union/abouteuropa/privacy-policy_en"
-msgstr "https://europa.eu/european-union/abouteuropa/privacy-policy_el"
+msgid "https://european-union.europa.eu/privacy-policy_en"
+msgstr "https://european-union.europa.eu/privacy-policy_el"
 
 msgid "Legal"
 msgstr "Νομικό πλαίσιο"
@@ -173,11 +174,17 @@ msgstr "Νομικό πλαίσιο"
 msgid "Legal notice"
 msgstr "Ανακοίνωση νομικού περιεχομένου"
 
-msgid "https://europa.eu/european-union/abouteuropa/legal_notices_en"
-msgstr "https://europa.eu/european-union/abouteuropa/legal_notices_el"
+msgid "https://european-union.europa.eu/legal-notice_en"
+msgstr "https://european-union.europa.eu/legal-notice_el"
 
-msgid "https://europa.eu/european-union/abouteuropa/cookies_en"
-msgstr "https://europa.eu/european-union/abouteuropa/cookies_el"
+msgid "https://european-union.europa.eu/cookies_en"
+msgstr "https://european-union.europa.eu/cookies_el"
+
+msgid "Accessibility"
+msgstr "Δυνατότητα πρόσβασης"
+
+msgid "https://european-union.europa.eu/web-accessibility-policy_en"
+msgstr "https://european-union.europa.eu/web-accessibility-policy_el"
 
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_el"
@@ -303,8 +310,8 @@ msgstr "https://ec.europa.eu/info/about-european-commission/contact_el"
 msgid "Contact the European Commission"
 msgstr "Επικοινωνία με την Ευρωπαϊκή Επιτροπή"
 
-msgid "https://europa.eu/european-union/contact/social-networks_en#n:+i:4+e:1+t:+s"
-msgstr "https://europa.eu/european-union/contact/social-networks_el#n:+i:4+e:1+t:+s"
+msgid "https://european-union.europa.eu/contact-eu/social-media-channels_en#/search?page=0&institutions=european_commission"
+msgstr "https://european-union.europa.eu/contact-eu/social-media-channels_el#/search?page=0&institutions=european_commission"
 
 msgid "Follow the European Commission on social media"
 msgstr ""
